--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/linear">
+            android:id="@+id/linear"
+            android:layout_marginBottom="16dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -71,6 +72,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:textColor="#00f"
+            android:textStyle="italic"
             android:gravity="center"
             android:text="Sign up"
             android:layout_below="@id/linear"/>
