--- a/app/src/main/res/layout/item_cacphongdadang_recyclerview.xml
+++ b/app/src/main/res/layout/item_cacphongdadang_recyclerview.xml
@@ -25,6 +25,7 @@
             android:layout_weight="2"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
@@ -43,21 +44,28 @@
                 android:layout_marginBottom="16dp"
                 android:text="Số người: 2 người/ phòng" />
 
-            <TextView
-                android:id="@+id/tv_gia"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Giá: 1.200.000/tháng"
-                android:textColor="@color/maudo"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_gia"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Giá: 1.200.000/tháng"
+                    android:textColor="@color/maudo"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_chitiet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:text="Chi tiết"
-                android:textColor="@color/colorPrimary" />
+                <TextView
+                    android:id="@+id/tv_chitiet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textSize="10sp"
+                    android:text="Chi tiết"
+                    android:textColor="@color/colorPrimary" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
