--- a/app/src/main/res/layout/activity_dang_phong_tro.xml
+++ b/app/src/main/res/layout/activity_dang_phong_tro.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".uis.DeitalActivity">
+    tools:context=".uis.DangPhongTroActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,35 +23,117 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="80dp"
                 android:gravity="center"
-                android:text="Chi Tiết"
+                android:text="Đăng phòng trọ"
                 android:textColor="#fff"
                 android:textSize="18sp" />
         </android.support.v7.widget.Toolbar>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="Hình Ảnh"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:id="@+id/img_avatar"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo"
-                android:text="Deital"
-                android:textSize="30sp" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/img1_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:layout_margin="8dp"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img2_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img3_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img4_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img5_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img6_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+            </LinearLayout>
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_upload_image_dpt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:layout_gravity="center_horizontal"
+            android:text="Tải lên"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -99,7 +180,7 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_xaphuong"
+                    android:id="@+id/edt_xaphuong_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_diachi_dpt"
@@ -126,7 +207,7 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_quanhuyen"
+                    android:id="@+id/edt_quanhuyen_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_diachi_dpt"
@@ -153,7 +234,7 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_gia"
+                    android:id="@+id/edt_gia_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_diachi_dpt"
@@ -180,7 +261,7 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_songuoi"
+                    android:id="@+id/edt_songuoi_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_diachi_dpt"
@@ -206,7 +287,7 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_sodienthoai"
+                    android:id="@+id/edt_sodienthoai_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_diachi_dpt"
@@ -217,13 +298,28 @@
 
             </LinearLayout>
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:drawableLeft="@drawable/ic_phone"
-                android:layout_marginTop="8dp"
-                android:text="Liên Hệ"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_post_dpt"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:text="Post" />
+
+                <Button
+                    android:id="@+id/btn_cancle_dpt"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:text="Cancle" />
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
