--- a/app/src/main/res/layout/activity_cac_phong_da_dang.xml
+++ b/app/src/main/res/layout/activity_cac_phong_da_dang.xml
@@ -4,23 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".uis.CacPhongDaDangActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_cacphongdadang"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="80dp"
-            android:gravity="center"
-            android:text="Đã Đăng"
-            android:textColor="#fff"
-            android:textSize="18sp" />
-    </android.support.v7.widget.Toolbar>
+    tools:context=".fragment.CacPhongDaDangFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_cacphongdadang"
