--- a/app/src/main/res/layout/activity_tim_phong_tro.xml
+++ b/app/src/main/res/layout/activity_tim_phong_tro.xml
@@ -6,6 +6,20 @@
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_timphongtro"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Tìm Phòng Trọ"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textColor="@color/mautrang"/>
+    </android.support.v7.widget.Toolbar>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
