--- a/app/src/main/res/layout/activity_dang_phong_tro.xml
+++ b/app/src/main/res/layout/activity_dang_phong_tro.xml
@@ -298,7 +298,7 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
-                    android:text="Cancle" />
+                    android:text="Cancel" />
             </LinearLayout>
 
         </LinearLayout>
