--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,13 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Lê Mạnh Cường"
+        android:id="@+id/navHeaderDisplayName"
+        android:text="Lê Mạnh Cườdng"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/navHeaderEmail"
         android:text="cuonglmph05451@fpt.edu.vn" />
 
 </LinearLayout>
