--- a/app/src/main/res/layout/fragment_gioi_thieu.xml
+++ b/app/src/main/res/layout/fragment_gioi_thieu.xml
@@ -1,15 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.GioiThieuFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<android.support.design.widget.AppBarLayout
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    >
+    <android.support.design.widget.CollapsingToolbarLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Finding Home - Một Sản Phẩm Của Nhóm 2" />
+        app:contentScrim="@color/colorPrimary"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        android:id="@+id/collapsingToolbar"
+        app:title="GIỚI THIỆU">
 
-</LinearLayout>
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/icon_logo"
+            android:layout_marginLeft="100dp"
+            app:layout_collapseMode="parallax"
+            android:scaleType="centerCrop"/>
+
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            app:layout_collapseMode="pin"
+
+            android:layout_height="?attr/actionBarSize">
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.CollapsingToolbarLayout>
+
+
+
+</android.support.design.widget.AppBarLayout>
+    <android.support.v4.widget.NestedScrollView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/content"
+            android:textSize="20dp"
+            android:textColor="black"/>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
