Fake Spinner , activity UpdateRoom

--- a/app/src/main/res/layout/activity_dang_phong_tro.xml
+++ b/app/src/main/res/layout/activity_dang_phong_tro.xml
@@ -133,10 +133,10 @@
                     android:textSize="14dp" />
 
                 <EditText
-                    android:id="@+id/edt_diachi_dpt"
+                    android:id="@+id/edt_update_diachi_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="So 2 , Nguyen Viet Xuan"
                     android:paddingLeft="10dp"
@@ -163,7 +163,7 @@
                     android:id="@+id/edt_xaphuong_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="Quang Trung"
                     android:paddingLeft="10dp"
@@ -190,7 +190,7 @@
                     android:id="@+id/edt_quanhuyen_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="Ha Dong"
                     android:paddingLeft="10dp"
@@ -217,7 +217,7 @@
                     android:id="@+id/edt_gia_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="10000"
                     android:paddingLeft="10dp"
@@ -244,7 +244,7 @@
                     android:id="@+id/edt_songuoi_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="2"
                     android:paddingLeft="10dp"
@@ -270,7 +270,7 @@
                     android:id="@+id/edt_sodienthoai_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_toRightOf="@+id/edt_diachi_dpt"
+                    android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
                     android:hint="01657822457"
                     android:paddingLeft="10dp"
