--- a/app/src/main/res/layout/activity_update_room.xml
+++ b/app/src/main/res/layout/activity_update_room.xml
@@ -1,57 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".uis.DeitalActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_deital"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="center"
-            android:background="@color/colorPrimary"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Chi Tiết"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:textColor="@color/mautrang"/>
-        </android.support.v7.widget.Toolbar>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="Hình Ảnh"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp">
 
-            <ImageView
-                android:layout_gravity="center"
-                android:id="@+id/img_avatar"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo"
-                android:text="Deital"
-                android:textSize="30sp" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/img1_update_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img2_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:layout_margin="8dp"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img3_update_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img4_update_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img5_update_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+
+                <ImageView
+                    android:id="@+id/img6_update_dpt"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop"
+                    android:text="Deital"
+                    android:textSize="30sp" />
+            </LinearLayout>
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_update_image_dpt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Tải lên"
+            android:textSize="10sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -70,12 +132,13 @@
                     android:textColor="#818480"
                     android:textSize="14dp" />
 
-                <TextView
+                <EditText
                     android:id="@+id/edt_update_diachi_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="So 2 , Nguyen Viet Xuan"
                     android:paddingLeft="10dp"
                     android:textColor="#818480"
                     android:textSize="16dp" />
@@ -96,12 +159,13 @@
                     android:textColor="#818480"
                     android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/edt_xaphuong"
+                <EditText
+                    android:id="@+id/edt__update_xaphuong_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="Quang Trung"
                     android:paddingLeft="10dp"
                     android:textColor="#818480"
                     android:textSize="16dp" />
@@ -122,12 +186,13 @@
                     android:textColor="#818480"
                     android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/edt_quanhuyen"
+                <EditText
+                    android:id="@+id/edt_update_quanhuyen_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="Ha Dong"
                     android:paddingLeft="10dp"
                     android:textColor="#818480"
                     android:textSize="16dp" />
@@ -148,12 +213,13 @@
                     android:textColor="#818480"
                     android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/edt_gia"
+                <EditText
+                    android:id="@+id/edt_update_gia_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="10000"
                     android:paddingLeft="10dp"
                     android:textColor="#818480"
                     android:textSize="16dp" />
@@ -174,15 +240,17 @@
                     android:textColor="#818480"
                     android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/edt_songuoi"
+                <EditText
+                    android:id="@+id/edt_update_songuoi_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="2"
                     android:paddingLeft="10dp"
                     android:textColor="#818480"
                     android:textSize="16dp" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -198,24 +266,40 @@
                     android:text="SĐT"
                     android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/edt_sodienthoai"
+                <EditText
+                    android:id="@+id/edt_update_sodienthoai_dpt"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_toRightOf="@+id/edt_update_diachi_dpt"
                     android:background="@drawable/duongvien_goctron"
+                    android:hint="01657822457"
                     android:paddingLeft="10dp"
                     android:textSize="16dp" />
 
             </LinearLayout>
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:drawableLeft="@drawable/ic_phone"
-                android:layout_marginTop="8dp"
-                android:text="Liên Hệ"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_update_dpt"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:text="Post" />
+
+                <Button
+                    android:id="@+id/btn_update_cancle_dpt"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:text="Cancle" />
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
