--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,9 +20,8 @@
             android:layout_marginBottom="16dp">
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:scaleType="centerCrop"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/logo"/>
