--- a/app/src/main/res/layout/fragment_danh_sach_phong_tro.xml
+++ b/app/src/main/res/layout/fragment_danh_sach_phong_tro.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.DanhSachPhongTroFragment"
     android:orientation="vertical">
 
     <LinearLayout
@@ -33,6 +32,8 @@
         android:id="@+id/recyclerView_danhsach"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></android.support.v7.widget.RecyclerView>
+        android:layout_weight="1">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
