--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -33,7 +33,7 @@
             android:id="@+id/img_zoom_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_zoom_in_black_24dp"
+            android:src="@drawable/ic_zoom_in"
             android:layout_marginBottom="5dp"
             android:padding="10dp"
             android:layout_gravity="bottom"
@@ -43,7 +43,7 @@
             android:id="@+id/img_zoom_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_zoom_out_black_24dp"
+            android:src="@drawable/ic_zoom_out"
             android:layout_marginBottom="50dp"
             android:padding="10dp"
             android:layout_gravity="bottom"
